@@ -1,0 +1,37 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Preferences editor.</title>
+  </head>
+
+  <body>
+    <h1>Preferences editor</h1>
+    <p>
+      The preferences editor allows you to edit some of the default
+      values for the GUI.  These defaults are stored in 
+      ~/.SpecTclDefaults, and look like an ordinary, editable text file.
+    </p>
+    <p>
+      
+      At the bottom of the preferences editor are three buttons:
+      <ul>
+      <li>Ok - Accepts the changes, and writes them out to your
+	preferences file ~/.SpecTclDefaults
+      </li>
+      <li>Cancel - Dismisses the dialog, making no changes.
+      </li
+      <li>Help - Displays this help message</li>
+
+    <hr>
+    <h3>Related materials</h3>
+<a href="Intro.html">Introduction</a>  
+<a href="Concepts.html">GUI Concepts</a>  
+<a href="Menus.html">Menus</a> 
+
+
+<!-- Created: Tue Oct  3 14:51:56 EDT 2006 -->
+<!-- hhmts start -->
+Last modified: Tue Oct  3 16:16:37 EDT 2006
+<!-- hhmts end -->
+  </body>
+</html>
